[gd_scene load_steps=5 format=3 uid="uid://dhl4qowp6c06j"]

[ext_resource type="Script" path="res://main.gd" id="1_etlhb"]
[ext_resource type="PackedScene" uid="uid://b1ug0040bhv31" path="res://player.tscn" id="1_n5jjx"]
[ext_resource type="PackedScene" uid="uid://bu1837fpjqdte" path="res://mob.tscn" id="2_4aogo"]

[sub_resource type="Curve2D" id="Curve2D_8e33f"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 448, 0, 0, 0, 0, 0, 448, 888, 0, 0, 0, 0, 0, 888, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_etlhb")
mob_scene = ExtResource("2_4aogo")

[node name="Player" parent="." instance=ExtResource("1_n5jjx")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPositionMarker" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobSpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_8e33f")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobSpawnPath"]
